Fixed issue with screen scaling with 1280 width on Safari.

--- a/src/client/style/global_styles.scss
+++ b/src/client/style/global_styles.scss
@@ -97,7 +97,6 @@ iframe {
       display: flex;
       flex-direction: column;
       width: 100%;
-      height: 100%;
       min-width: 1200px;
       overflow-x: hidden;
 
